--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,24 +1,24 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/frontend/node_modules
-/frontend/.pnp
-/frontend/.pnp.*
-/frontend/.yarn/*
+/node_modules
+/.pnp
+.pnp.*
+.yarn/*
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
 !.yarn/versions
 
 # testing
-/frontend/coverage
+/coverage
 
 # next.js
-/frontend/.next/
-/frontend/out/
+/.next/
+/out/
 
 # production
-/frontend/build
+/build
 
 # misc
 .DS_Store
@@ -31,11 +31,11 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
-frontend/.env*
+.env*
 
 # vercel
-/frontend/.vercel
+.vercel
 
 # typescript
-/frontend/*.tsbuildinfo
-/frontend/next-env.d.ts
+*.tsbuildinfo
+next-env.d.ts
